No pacman for mobile :(

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="inner">
 			<span class="icon major fa-cloud" autofocus="true"></span>
 			<h1>Hi, I'm <strong>Christopher</strong>, your friendly,<br />
-					neighborhood Web & App developer.</h1>
+					on-demand Web & App developer.</h1>
 			<p>Looking for a sleek webpage, complex web application, or even <a href="#two"><b>mobile apps</b><a>?<br /> Look no further... except further down this page!</p>
 			<ul class="actions">
 				<li><a href="#one" class="button scrolly">Let's go!</a></li>
@@ -40,8 +40,46 @@
 						<h2>Christopher Duflo</h2>
 					</header>
 					<p>Results-oriented full stack developer with 6+ years of experience in IT Consulting across a variety of industries and a passion for solving complex business problems with elegant technological solutions. </p>
-					<p>Excellent experience with: Javascript, AngularJS, jQuery, Node.js, Express, Loopback, Elasticsearch, Koa, Ionic, Cordova, NPM, MongoDB, CloudDB, PouchDB, SQL Server, HTML5, CSS3, Bootstrap, C#, REST APIs, OAuth, Heroku, Salesforce.com, Oracle EBS,
-						Oracle SQL Developer</p>
+					<p style="margin-bottom:5px;">Excellent experience with:</p>
+
+					<div class="row 150%">
+						<div class="4u 12u$(medium)">
+							<ul>
+								<li>AngularJS</li>
+								<li>Bootstrap</li>
+								<li>C#</li>
+								<li>CloudDB/PouchDB</li>
+								<li>Cordova</li>
+								<li>CSS3</li>
+								<li>Elasticsearch</li>
+								<li>Express</li>
+							</ul>
+						</div>
+						<div class="4u 12u$(medium)">
+							<ul>
+								<li>Heroku</li>
+								<li>HTML5</li>
+								<li>Ionic</li>
+								<li>Javascript</li>
+								<li>jQuery</li>
+								<li>Koa</li>
+								<li>Loopback</li>
+								<li>MongoDB</li>
+							</ul>
+						</div>
+						<div class="4u 12u$(medium)">
+							<ul>
+								<li>Node.js</li>
+								<li>NPM</li>
+								<li>OAuth</li>
+								<li>Oracle EBS</li>
+								<li>Oracle SQL</li>
+								<li>REST APIs</li>
+								<li>Salesforce.com</li>
+								<li>SQL Server</li>
+							</ul>
+						</div>
+					</div>
 				</div>
 				<div class="6u$ 12u$(medium) important(medium)">
 					<span class="image fit"><img src="images/duflo.jpg" alt="" style="max-width:350px;margin:auto;"/></span>
@@ -77,7 +115,7 @@
 							<li>Operate offline, sync whenever</li>
 						</ul>
 					</p>
-					<p style="margin-bottom:5px;"><b>Web Apps</b><br> High quality mobile apps for Apple iOS and Android
+					<p style="margin-bottom:5px;"><b>Web Apps</b><br> Brilliantly designed workflows to manage your data
 						<ul>
 							<li>Access your data in custom designed tables and forms</li>
 							<li>Draw conclusions with custom graphs and charts</li>
@@ -85,7 +123,7 @@
 							<li>Custom designed application workflows</li>
 						</ul>
 					</p>
-					<p style="margin-bottom:5px;"><b>Web Pages</b><br> High quality mobile apps for Apple iOS and Android
+					<p style="margin-bottom:5px;"><b>Web Pages</b><br> Dazzle your clients with slick content
 						<ul>
 							<li>Beautifully designed UI to delight your customers</li>
 							<li>Personalized service to make sure your site represents you</li>
@@ -145,7 +183,8 @@
 	<section id="four" class="main style2 special">
 		<div class="container">
 			<header class="major">
-				<h2>Want to play some PacMan?</h2>
+				<h2>Treat yourself to a game of PacMan</h2>
+				<h3>Insert Coin and use your Arrow Keys to play</h3>
 			</header>
 			<script src="pcm/script4.js"></script>
 			<script src="pcm/script3.js"></script>
@@ -512,6 +551,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
+	<script src="pcm/killpcm.js">
+	</script>
 	<script src="assets/js/jquery.scrolly.min.js"></script>
 	<script src="assets/js/skel.min.js"></script>
 	<script src="assets/js/util.js"></script>
